:bug: fixes dropdown on docs and guide
The dropdowns for user profile and guide was not showing the border and shadow because of not using tailwind base, which we can’t use here.

--- a/frontend/userguidestyles.css
+++ b/frontend/userguidestyles.css
@@ -120,3 +120,8 @@ select, #search-input {
 #avatar>div>img {
   @apply rounded;
 }
+
+#userMenu, #guideMenu {
+  border: 1px solid #d1d5db;
+}
+
